--- a/paper/references.bib
+++ b/paper/references.bib
@@ -201,3 +201,18 @@ DOI = {10.3390/psf2022005051}
 	title = {dynesty: a dynamic nested sampling package for estimating Bayesian posteriors and evidences},
 	journal = {Monthly Notices of the Royal Astronomical Society}
 }
+
+@article{demons,
+    author = {Habeck, Michael},
+    title = "{Nested sampling with demons}",
+    journal = {AIP Conference Proceedings},
+    volume = {1641},
+    number = {1},
+    pages = {121-129},
+    year = {2015},
+    month = {01},
+    issn = {0094-243X},
+    doi = {10.1063/1.4905971},
+    url = {https://doi.org/10.1063/1.4905971},
+    eprint = {https://pubs.aip.org/aip/acp/article-pdf/1641/1/121/12134520/121\_1\_online.pdf},
+}
